# ADAM

./: .bedrock_agentcore.yaml  Dockerfile  README.md  pyproject.toml
src/adam/: crew.py  utility_functions.py
src/adam/config/: agents.yaml  tasks.yaml
src/adam/local_testing/: bedrock_agentcore_invoke.py  bedrock_invoke_model.py  local_test.py
src/adam/tools/: create_gtm_ga4_event_tag_tool.py  fetch_network_requests_tool.py  get_ga4_report_tool.py  run_js_code_tool.py
streamlit-application/: app.py
